feat: switch to java 17
Signed-off-by: licho <lecho.sun@gmail.com>